dev server first version

--- a/dev-server/index.html
+++ b/dev-server/index.html
@@ -5,10 +5,8 @@
         <title>Hello React!</title>
     </head>
     <body>
-        <!-- Dependencies -->
-        <script src="../node_modules/react/dist/react.js"></script>
-        <script src="../node_modules/react-dom/dist/react-dom.js"></script>
         <!-- Main -->
+        <script type="text/javascript" src="./public/babel-polyfill/polyfill.min.js"></script>
         <script src="./dist/bundle.js"></script>
     </body>
 </html>
