--- a/platform2/jsp/index.html
+++ b/platform2/jsp/index.html
@@ -7,8 +7,10 @@
     <title>EasyFare</title>
     <link rel="stylesheet" href="public/antd/antd.min.css">
 <body>
-    <script  type="text/javascript" src="/public/babel-polyfill/polyfill.min.js"></script>
-    <script type="text/javascript" src="public/axios/axios.min.js"></script>
+
+    <script type="text/javascript" src="public/jquery/jquery.min.js"></script>
+    <script  type="text/javascript" 
+        src="/public/babel-polyfill/polyfill.min.js"></script>
     <script type="text/javascript" src="public/load.js"></script>
     <script type="text/javascript"> 
         window.onload = function (){
