--- a/price4/client/assets/template.html
+++ b/price4/client/assets/template.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EasyFare</title>
-    <link rel="stylesheet" href="antd/antd.min.css" />
+    <link rel="stylesheet" href="/antd/antd.min.css" />
 </head>
 <body>
-    <script  type="text/javascript" src="babel-polyfill/polyfill.min.js"></script>
-    <script  type="text/javascript" src="axios/axios.min.js"></script>
+    <script  type="text/javascript" src="/babel-polyfill/polyfill.min.js"></script>
+    <script  type="text/javascript" src="/axios/axios.min.js"></script>
 </body>
 </html>
