--- a/price4/webapp/index.html
+++ b/price4/webapp/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript"> 
         //加载模块需要的资源文件
         window.onload = function (){
-           new DynamicLoadPageResoure('category4Edit') ;
+           new DynamicLoadPageResoure('login') ;
         } 
     </script>
 </body>
