增加登陆页面

--- a/price4/webapp/pages/index.html
+++ b/price4/webapp/pages/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript"> 
         //加载模块需要的资源文件
         window.onload = function (){
-           new DynamicLoadPageResoure('category4Edit') ;
+           new DynamicLoadPageResoure('login') ;
         } 
     </script>
 </body>
